// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp [NEGATIVE] should render with a invalid data 1`] = `
.c25 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c23 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c23 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c23 > div svg {
  margin-right: 0.25rem;
}

.c23 > div {
  color: #FFFFFF;
}

.c23 > div svg {
  fill: #FFFFFF;
}

.c23:hover:enabled {
  background-color: #2F65E0;
}

.c23:disabled {
  background-color: #B3C6F1;
}

.c23:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c24 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c11 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c10:hover:enabled {
  border-color: #2F65E0;
}

.c10:active:enabled,
.c10:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c10:disabled {
  color: #DBDBDB;
  border-color: rgba(219,219,219,0.2);
  background-color: rgba(219,219,219,0.2);
}

.c10::-webkit-input-placeholder {
  color: #808080;
}

.c10::-moz-placeholder {
  color: #808080;
}

.c10:-ms-input-placeholder {
  color: #808080;
}

.c10::placeholder {
  color: #808080;
}

.c10:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c10:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::placeholder {
  color: #DBDBDB;
}

.c10:-webkit-autofill,
.c10:-webkit-autofill:hover,
.c10:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c10:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c8 {
  max-height: 3.5rem;
}

.c8:hover .c9:enabled {
  border-color: #2F65E0;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c13 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 svg {
  fill: #4475E3;
}

.c13:active,
.c13:enabled:hover {
  cursor: pointer;
}

.c13:active svg,
.c13:enabled:hover svg {
  fill: #4475E3;
}

.c13:disabled svg {
  fill: #DBDBDB;
}

.c14 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c14:hover {
  cursor: pointer;
}

.c18 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c20 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c17 {
  display: inline-block;
}

.c17 input {
  display: none;
}

.c17 .c19 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c17 .c19 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c28 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c27 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c27:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 0 auto 2.25rem;
}

.c5 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c15 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c16 {
  height: 2.5rem;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c26 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Create account
        </div>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-email"
                name="email"
                placeholder="Enter email"
                type="email"
                value=""
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-name"
                name="name"
                placeholder="Enter name"
                type="text"
                value=""
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-password"
                name="password"
                placeholder="Enter password"
                type="password"
                value=""
              />
              <div
                class="c12"
              >
                <button
                  class="c13 c14"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="1"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Be at least 12 characters in length"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="2"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Contains 1 upper case, 1 lower case, 1 number, and 1 special character"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="3"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Does not contain more than 3 identical characters in a row"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="4"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Does not contain username"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c23"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c24"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c25"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c26"
        >
          Already have an account?
          <a
            class="c27"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c28"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp [NEGATIVE] should render with a invalid data 2`] = `
.c31 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c29 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c29 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c29 > div svg {
  margin-right: 0.25rem;
}

.c29 > div {
  color: #FFFFFF;
}

.c29 > div svg {
  fill: #FFFFFF;
}

.c29:hover:enabled {
  background-color: #2F65E0;
}

.c29:disabled {
  background-color: #B3C6F1;
}

.c29:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c30 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c11 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c15 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c10:hover:enabled {
  border-color: #2F65E0;
}

.c10:active:enabled,
.c10:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c10:disabled {
  color: #DBDBDB;
  border-color: rgba(219,219,219,0.2);
  background-color: rgba(219,219,219,0.2);
}

.c10::-webkit-input-placeholder {
  color: #808080;
}

.c10::-moz-placeholder {
  color: #808080;
}

.c10:-ms-input-placeholder {
  color: #808080;
}

.c10::placeholder {
  color: #808080;
}

.c10:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c10:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::placeholder {
  color: #DBDBDB;
}

.c10:-webkit-autofill,
.c10:-webkit-autofill:hover,
.c10:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c10:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c14 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #FFEBEB;
  border: 0.0625rem solid #FFEBEB;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #D14343;
}

.c14:hover:enabled {
  border-color: transparent;
}

.c14:active:enabled,
.c14:focus-visible {
  outline: none;
  border-color: transparent;
}

.c14:disabled {
  color: #DBDBDB;
  border-color: rgba(219,219,219,0.2);
  background-color: rgba(219,219,219,0.2);
}

.c14::-webkit-input-placeholder {
  color: #808080;
}

.c14::-moz-placeholder {
  color: #808080;
}

.c14:-ms-input-placeholder {
  color: #808080;
}

.c14::placeholder {
  color: #808080;
}

.c14:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c14:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c14:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c14:disabled::placeholder {
  color: #DBDBDB;
}

.c14:-webkit-autofill,
.c14:-webkit-autofill:hover,
.c14:-webkit-autofill:focus {
  border: 0.0625rem solid #FFEBEB;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #FFEBEB !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c14:-webkit-autofill:focus {
  border-color: transparent;
}

.c8 {
  max-height: 3.5rem;
}

.c8:hover .c9:enabled {
  border-color: #2F65E0;
}

.c13 {
  max-height: 3.5rem;
}

.c13:hover .c9:enabled {
  border-color: transparent;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c12 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  gap: 0.5rem;
  height: 1.125rem;
}

.c16 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 svg {
  fill: #D14343;
}

.c16:active,
.c16:enabled:hover {
  cursor: pointer;
}

.c16:active svg,
.c16:enabled:hover svg {
  fill: #D14343;
}

.c16:disabled svg {
  fill: #DBDBDB;
}

.c17 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c17:hover {
  cursor: pointer;
}

.c22 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c24 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c35 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c35 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c20 {
  display: inline-block;
}

.c20 input {
  display: none;
}

.c20 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #FF3333;
}

.c20 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c20:hover > .c21 {
  cursor: pointer;
}

.c27 {
  display: inline-block;
}

.c27 input {
  display: none;
}

.c27 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #2DC008;
}

.c27 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c27:hover > .c21 {
  cursor: pointer;
}

.c34 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c33 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c33:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 0 auto 2.25rem;
}

.c5 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c18 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c19 {
  height: 2.5rem;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
}

.c32 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c32 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Create account
        </div>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-email"
                name="email"
                placeholder="Enter email"
                type="email"
                value="email@samsung.com"
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-name"
                name="name"
                placeholder="Enter name"
                type="text"
                value="username"
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c12"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c13"
            >
              <input
                class="c9 c14"
                data-testid="auth-signup-password"
                name="password"
                placeholder="Enter password"
                type="password"
                value="username"
              />
              <div
                class="c15"
              >
                <button
                  class="c16 c17"
                  color="statusErrorText"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <div
              class="c20 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c21 c22"
                for="1"
              >
                <div
                  class="c23 c24"
                >
                  <svg />
                </div>
                <div
                  class="c25"
                >
                  <span
                    class="c26"
                    id="Be at least 12 characters in length"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c21 c22"
                for="2"
              >
                <div
                  class="c23 c24"
                >
                  <svg />
                </div>
                <div
                  class="c25"
                >
                  <span
                    class="c26"
                    id="Contains 1 upper case, 1 lower case, 1 number, and 1 special character"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c27 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c21 c22"
                for="3"
              >
                <div
                  class="c23 c24"
                >
                  <svg />
                </div>
                <div
                  class="c25"
                >
                  <span
                    class="c28"
                    id="Does not contain more than 3 identical characters in a row"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20 "
              color="disabled"
              kind="error"
              readonly=""
            >
              <label
                class="c21 c22"
                for="4"
              >
                <div
                  class="c23 c24"
                >
                  <svg />
                </div>
                <div
                  class="c25"
                >
                  <span
                    class="c26"
                    id="Does not contain username"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c29"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c30"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c31"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c32"
        >
          Already have an account?
          <a
            class="c33"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c34"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp should render 1`] = `
.c25 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c23 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c23 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c23 > div svg {
  margin-right: 0.25rem;
}

.c23 > div {
  color: #FFFFFF;
}

.c23 > div svg {
  fill: #FFFFFF;
}

.c23:hover:enabled {
  background-color: #2F65E0;
}

.c23:disabled {
  background-color: #B3C6F1;
}

.c23:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c24 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c11 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c10:hover:enabled {
  border-color: #2F65E0;
}

.c10:active:enabled,
.c10:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c10:disabled {
  color: #DBDBDB;
  border-color: rgba(219,219,219,0.2);
  background-color: rgba(219,219,219,0.2);
}

.c10::-webkit-input-placeholder {
  color: #808080;
}

.c10::-moz-placeholder {
  color: #808080;
}

.c10:-ms-input-placeholder {
  color: #808080;
}

.c10::placeholder {
  color: #808080;
}

.c10:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c10:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::placeholder {
  color: #DBDBDB;
}

.c10:-webkit-autofill,
.c10:-webkit-autofill:hover,
.c10:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c10:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c8 {
  max-height: 3.5rem;
}

.c8:hover .c9:enabled {
  border-color: #2F65E0;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c13 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 svg {
  fill: #4475E3;
}

.c13:active,
.c13:enabled:hover {
  cursor: pointer;
}

.c13:active svg,
.c13:enabled:hover svg {
  fill: #4475E3;
}

.c13:disabled svg {
  fill: #DBDBDB;
}

.c14 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c14:hover {
  cursor: pointer;
}

.c18 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c20 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c17 {
  display: inline-block;
}

.c17 input {
  display: none;
}

.c17 .c19 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c17 .c19 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c28 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c27 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c27:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 0 auto 2.25rem;
}

.c5 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c15 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c16 {
  height: 2.5rem;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #838383;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c26 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Create account
        </div>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-email"
                name="email"
                placeholder="Enter email"
                type="email"
                value=""
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-name"
                name="name"
                placeholder="Enter name"
                type="text"
                value=""
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-password"
                name="password"
                placeholder="Enter password"
                type="password"
                value=""
              />
              <div
                class="c12"
              >
                <button
                  class="c13 c14"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="1"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Be at least 12 characters in length"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="2"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Contains 1 upper case, 1 lower case, 1 number, and 1 special character"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="3"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Does not contain more than 3 identical characters in a row"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="disabled"
              disabled=""
              kind="success"
              readonly=""
            >
              <label
                class="c18"
                for="4"
              >
                <div
                  class="c19 c20"
                >
                  <svg />
                </div>
                <div
                  class="c21"
                  disabled=""
                >
                  <span
                    class="c22"
                    id="Does not contain username"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                disabled=""
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c23"
          data-testid="auth-signup-create"
          disabled=""
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c24"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c25"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c26"
        >
          Already have an account?
          <a
            class="c27"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c28"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp should render 2`] = `
.c26 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c24 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c24:hover {
  cursor: pointer;
}

.c24 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c24 > div svg {
  margin-right: 0.25rem;
}

.c24 > div {
  color: #FFFFFF;
}

.c24 > div svg {
  fill: #FFFFFF;
}

.c24:hover:enabled {
  background-color: #2F65E0;
}

.c24:disabled {
  background-color: #B3C6F1;
}

.c24:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c25 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c11 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c12 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c10:hover:enabled {
  border-color: #2F65E0;
}

.c10:active:enabled,
.c10:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c10:disabled {
  color: #DBDBDB;
  border-color: rgba(219,219,219,0.2);
  background-color: rgba(219,219,219,0.2);
}

.c10::-webkit-input-placeholder {
  color: #808080;
}

.c10::-moz-placeholder {
  color: #808080;
}

.c10:-ms-input-placeholder {
  color: #808080;
}

.c10::placeholder {
  color: #808080;
}

.c10:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c10:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c10:disabled::placeholder {
  color: #DBDBDB;
}

.c10:-webkit-autofill,
.c10:-webkit-autofill:hover,
.c10:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c10:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c8 {
  max-height: 3.5rem;
}

.c8:hover .c9:enabled {
  border-color: #2F65E0;
}

.c30:hover .c9:enabled {
  border-color: transparent;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c13 {
  background: none;
  border: none;
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 svg {
  fill: #4475E3;
}

.c13:active,
.c13:enabled:hover {
  cursor: pointer;
}

.c13:active svg,
.c13:enabled:hover svg {
  fill: #4475E3;
}

.c13:disabled svg {
  fill: #DBDBDB;
}

.c14 {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 2rem);
}

.c14:hover {
  cursor: pointer;
}

.c19 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c21 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c31 .c20 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #DBDBDB;
}

.c31 .c20 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c32 .c20 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #FF3333;
}

.c32 .c20 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c32:hover > .c18 {
  cursor: pointer;
}

.c17 {
  display: inline-block;
}

.c17 input {
  display: none;
}

.c17 .c20 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #2DC008;
}

.c17 .c20 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c17:hover > .c18 {
  cursor: pointer;
}

.c29 {
  position: relative;
  height: 0;
  width: 100%;
  pointer-events: none;
}

.c28 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c28:hover {
  cursor: pointer;
}

.c1 {
  color: #474747;
  min-width: 45.8125rem;
  width: 55.556vw;
  min-height: 44.037265625rem;
  height: 53.403205vw;
  max-height: 90vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 28rem;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 1rem;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 0 auto 2.25rem;
}

.c5 {
  margin-top: 0.1875rem;
  margin-bottom: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 1.0625rem;
}

.c15 {
  margin-top: 0.875rem;
  margin-bottom: 1.625rem;
}

.c16 {
  height: 2.5rem;
}

.c23 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.5rem;
}

.c27 a {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #4475E3;
  display: inline-block;
  margin-left: 0.5rem;
}

@media (max-height:44rem) {
  .c0 {
    overflow-y: scroll;
  }
}

@media (max-width:45.75rem) {
  .c0 {
    overflow-x: scroll;
  }
}

<div
  class="c0"
  data-testid="auth-signup"
>
  <div
    class="c1"
    width="55.556"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Create account
        </div>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Email
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-email"
                name="email"
                placeholder="Enter email"
                type="email"
                value="email@samsung.com"
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Name
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-name"
                name="name"
                placeholder="Enter name"
                type="text"
                value="username"
              />
              <div
                class="c11"
              />
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-description"
            >
              Password
            </div>
            <div
              class="c8"
            >
              <input
                class="c9 c10"
                data-testid="auth-signup-password"
                name="password"
                placeholder="Enter password"
                type="password"
                value="qweQWE123!@#"
              />
              <div
                class="c12"
              >
                <button
                  class="c13 c14"
                  color="primary"
                >
                  <svg
                    data-testid="icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c18 c19"
                for="1"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                >
                  <span
                    class="c23"
                    id="Be at least 12 characters in length"
                  >
                    Be at least 12 characters in length
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="1"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c18 c19"
                for="2"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                >
                  <span
                    class="c23"
                    id="Contains 1 upper case, 1 lower case, 1 number, and 1 special character"
                  >
                    Contains 1 upper case, 1 lower case, 1 number, and 1 special character
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="2"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c18 c19"
                for="3"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                >
                  <span
                    class="c23"
                    id="Does not contain more than 3 identical characters in a row"
                  >
                    Does not contain more than 3 identical characters in a row
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="3"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
          <div
            class="c16"
          >
            <div
              class="c17 "
              color="statusSuccess"
              kind="success"
              readonly=""
            >
              <label
                class="c18 c19"
                for="4"
              >
                <div
                  class="c20 c21"
                >
                  <svg />
                </div>
                <div
                  class="c22"
                >
                  <span
                    class="c23"
                    id="Does not contain username"
                  >
                    Does not contain username
                  </span>
                </div>
              </label>
              <input
                checked=""
                data-testid="auth-signup-radio"
                id="4"
                readonly=""
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <button
          class="c24"
          data-testid="auth-signup-create"
          fill="solid"
          style="overflow: hidden; position: relative;"
        >
          <div
            class="c25"
            data-testid="content"
          >
            Create Account
          </div>
          <div
            class="c26"
            color="primaryPressed"
            opacity="1,1"
            scale="0"
            style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
          />
        </button>
        <div
          class="c27"
        >
          Already have an account?
          <a
            class="c28"
            href="/signin"
          >
            Sign in
          </a>
        </div>
      </div>
      <div
        class="c29"
      />
    </div>
  </div>
</div>
`;
